# my_first_project

./: .env.example  .pre-commit-config.yaml  Dockerfile  Makefile  db.sqlite3  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
hotel/: models.py  serializers.py  tests.py  urls.py  views.py
hotel/migrations/: 0001_initial.py
